# put-together-skill

./: .env.example  .gitignore  SKILL.md  pyproject.toml
bridge/: openapi.yaml
references/: architecture.md  config-and-auth.md  distribution.md  link-flow.md  recommendation-flows.md  server-side-boundaries.md  skill-package-structure.md
scripts/: put_together.py  webhook_handler.py
src/put_together_skill/: __init__.py  bridge.py  cli.py  config.py  session.py
