[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "put-together-skill"
version = "0.1.0"
description = "Standalone OpenClaw skill connector for Put Together Bridge"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
put-together-client = "put_together_skill.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
